@@ -44,6 +44,8 @@ Version 1.13.1+dev:
      without #undef, to help detect unintentional name clashes.
    * Fix macro definition line numbers being offset by 1 in WML preprocessor
      messages involving macros.
+   * Added WML menu item and event handler views to the Gamestate Inspector
+     dialog.
  * Editor:
    * Added Category field and color sliders to the Edit Label panel.
  * Miscellaneous and bug fixes:
